--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <!-- AUDIO -->
   <audio id="music" src="music.mp3" preload="auto"></audio>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=3"></script>
 </body>
 </html>
+
