--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+  <div id="ball-container"></div>
+  
   <!-- INTRO -->
   <div id="intro">
     <div id="heart">❤️</div>
@@ -42,4 +44,5 @@
   <script src="script.js?v=3"></script>
 </body>
 </html>
+
 
