--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Para el amor de mi vida</title>
+  <title>Para el amor de mi vida...</title>
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -44,5 +44,6 @@
   <script src="script.js?v=3"></script>
 </body>
 </html>
+
 
 
