--- a/index.html
+++ b/index.html
@@ -1,77 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Para el amor de mi vida</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- CONTENEDOR PELOTA -->
-  <div id="ball-container"></div>
+<!-- INTRO -->
+<div id="intro">
+  <div id="heart">❤️</div>
+  <p>Para el amor de mi vida</p>
+  <span>(Toca el corazón)</span>
+</div>
 
-  <!-- INTRO -->
-  <div id="intro">
-    <div id="heart">❤️</div>
-    <p>Para el amor de mi vida</p>
-    <span>(Toca el corazón)</span>
+<!-- ESCENA -->
+<div id="scene">
+  <!-- ÁRBOL SVG -->
+  <svg id="tree" viewBox="0 0 400 600">
+    <!-- TRONCO Y RAMAS -->
+    <path class="branch" d="M200 600 C200 500 200 400 200 300" />
+    <path class="branch" d="M200 450 C140 380 90 320 70 260" />
+    <path class="branch" d="M200 420 C260 360 310 300 330 250" />
+    <path class="branch" d="M200 380 C150 320 130 280 120 240" />
+    <path class="branch" d="M200 360 C250 300 270 260 280 230" />
+
+    <!-- CORAZONES (COPA) -->
+    <g id="leaves">
+      <text x="70"  y="260">❤️</text>
+      <text x="100" y="230">❤️</text>
+      <text x="140" y="250">❤️</text>
+      <text x="180" y="220">❤️</text>
+      <text x="220" y="230">❤️</text>
+      <text x="260" y="250">❤️</text>
+      <text x="300" y="230">❤️</text>
+      <text x="330" y="250">❤️</text>
+      <text x="160" y="260">❤️</text>
+      <text x="240" y="260">❤️</text>
+    </g>
+  </svg>
+
+  <!-- TEXTO -->
+  <div id="content">
+    <div id="counter"></div>
+    <div id="text"></div>
   </div>
+</div>
 
-  <!-- ESCENA -->
-  <div id="scene">
-    
-    <!-- ÁRBOL SVG -->
-    <svg id="tree" viewBox="0 0 300 400">
-      <!-- Tronco -->
-      <path d="M150 380 C145 300 155 240 150 180"
-            stroke="#7a4a1f"
-            stroke-width="12"
-            fill="none"
-            class="trunk"/>
+<audio id="music" src="music.mp3"></audio>
 
-      <!-- Ramas -->
-      <path d="M150 250 C110 220 90 190 70 160"
-            stroke="#7a4a1f"
-            stroke-width="8"
-            fill="none"
-            class="branch"/>
-      <path d="M150 240 C190 210 220 180 240 150"
-            stroke="#7a4a1f"
-            stroke-width="8"
-            fill="none"
-            class="branch"/>
-
-      <!-- Corazones -->
-      <text x="80" y="140" class="leaf">❤️</text>
-      <text x="110" y="120" class="leaf">❤️</text>
-      <text x="140" y="110" class="leaf">❤️</text>
-      <text x="170" y="120" class="leaf">❤️</text>
-      <text x="200" y="140" class="leaf">❤️</text>
-      <text x="120" y="90" class="leaf">❤️</text>
-      <text x="160" y="90" class="leaf">❤️</text>
-    </svg>
-
-    <!-- TEXTO -->
-    <div id="content">
-      <div id="counter"></div>
-
-      <div id="text">
-        <p>Para el amor de mi vida:</p>
-        <p>
-          Si pudiera elegir un lugar seguro,<br>
-          sería a tu lado.<br><br>
-          Cuanto más tiempo estoy contigo,<br>
-          más te amo.
-        </p>
-        <p>— I Love You 💖</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- AUDIO -->
-  <audio id="music" src="music.mp3" preload="auto"></audio>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
